Changed background color of user display in jokes, and made it a link.

--- a/static/css/jokes.css
+++ b/static/css/jokes.css
@@ -56,7 +56,7 @@
     margin-bottom: 0;
     padding: 0;
     width: fit-content;
-    background-color: #663366;
+    background-color: #ffe97f;
     background-clip: border-box;
     height: fit-content;
     border: 2px solid #f5f3ef;
